--- a/static/index.html
+++ b/static/index.html
@@ -165,7 +165,8 @@
   </div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
-  <script src="bundle.js" async></script>
+  <script src="jquery-3.1.1.slim.min.js"></script>
+  <script src="main.js" async></script>
 
 </body>
 </html>
